# envied

./: .gitignore  CHANGELOG.md  CONFIG.md  Install-media-tools.ps1  Install-media-tools.sh  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
Cache/ITV/: titles_494df8449cc64f5a_gb.json  titles_6625fb11e5a190ec_gb.json
Cache/global/: ip_info.json
Temp/: Subtitle_7d29fb.vtt  Subtitle_8ed52b.vtt  Subtitle_91804f.vtt
WVDs/: device.wvd
WVDs/device/: metadata.yml
docs/: ADVANCED_CONFIG.md  DOWNLOAD_CONFIG.md  DRM_CONFIG.md  GLUETUN.md  NETWORK_CONFIG.md  OUTPUT_CONFIG.md  SERVICE_CONFIG.md  SUBTITLE_CONFIG.md
post_processing/: extract_mks_subs.py  mkv_to_mp4.py  post_processing.md
unshackle/: unshackle-example.yaml  unshackle.yaml  word_replace.sh
unshackle/commands/: dl.bak  dl.py  env.py  far_to_dl.patch  kv.py  prd.py  search.py  serve.py  util.py
unshackle/core/: __main__.py  binaries.py  cacher.py  config.py  console.py  constants.py  service.py  services.py  session.py  title_cacher.py  update_checker.py  utilities.py
unshackle/core/api/: __init__.py  download_manager.py  download_worker.py  errors.py  handlers.py  routes.py
unshackle/core/cdm/: __init__.py  custom_remote_cdm.py  decrypt_labs_remote_cdm.py  detect.py
unshackle/core/downloaders/: aria2c.py  curl_impersonate.py  n_m3u8dl_re.py  requests.py
unshackle/core/drm/: __init__.py  clearkey.py  monalisa.py  playready.py  widevine.py
unshackle/core/manifests/: dash.py  hls.py  ism.py  m3u8.py
unshackle/core/proxies/: __init__.py  gluetun.py  nordvpn.py  surfsharkvpn.py  windscribevpn.py
unshackle/core/titles/: episode.py  movie.py  song.py
unshackle/core/tracks/: attachment.py  audio.py  hybrid.py  subtitle.py  track.py  tracks.py  video.py
unshackle/core/utils/: click_types.py  selector.py  tags.py  webvtt.py
unshackle/services/: README.md
unshackle/services/ALL4/: __init__.py  config.yaml
unshackle/services/ARD/: __init__.py  config.yaml
unshackle/services/AUBC/: __init__.py  config.yaml
unshackle/services/CBC/: __init__.py  config.yaml
unshackle/services/CBS/: __init__.py  config.yaml
unshackle/services/CR/: __init__.py  config.yaml
unshackle/services/CTV/: __init__.py  config.yaml
unshackle/services/CWTV/: __init__.py  config.yaml
unshackle/services/DSCP/: __init__.py  config.yaml
unshackle/services/DSNP/: __init__.py  config.yaml  queries.py
unshackle/services/ITV/: __init__.py  config.yaml
unshackle/services/MAX/: __init__.py  config.yaml
unshackle/services/MTSP/: __init__.py  config.yaml
unshackle/services/MY5/: __init__.py  config.yaml
unshackle/services/NBLA/: __init__.py  config.yaml
unshackle/services/NF/: __init__.py
unshackle/services/NPO/: __init__.py  config.yaml
unshackle/services/NRK/: __init__.py  config.yaml
unshackle/services/PCOK/: __init__.py
unshackle/services/PLEX/: __init__.py  config.yaml
unshackle/services/PLUTO/: __init__.py  config.yaml
unshackle/services/PTHS/: __init__.py  config.yaml
unshackle/services/RKTN/: __init__.py  config.yaml
unshackle/services/ROKU/: __init__.py
unshackle/services/RTE/: __init__.py  config.yaml
unshackle/services/SEVEN/: __init__.py  config.yaml
unshackle/vaults/: API.py  HTTPAPI.py  SQLite.py
(+24 files in other folders)
